[project]
name = "findomain"
version = "0.1.0"
description = "查询域名是否已被注册"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deprecated>=1.2.18",
    "json5>=0.12.0",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]

[project.scripts]
findomain = "findomain:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 79
fix = true

[tool.ruff.format]
quote-style = "single"